--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@wonderlandengine/api": "$@wonderlandengine/api"
   },
   "dependencies": {
-    "@wonderlandengine/api": "file:../../../../../Repos/wonderland-engine/js/api/wonderlandengine-api.tgz",
+    "@wonderlandengine/api": ">=1.2.0 <1.3.0",
     "@wonderlandengine/components": "^1.1.4",
     "@wonderlandengine/editor-api": "^1.2.0-dev.3",
     "gl-matrix": "^3.4.3",
